Fixed big "L" and some spacing and alignment issues

--- a/week3_working_files/assignment/1.Relaxr/starter_code/css/normalize.css
+++ b/week3_working_files/assignment/1.Relaxr/starter_code/css/normalize.css
@@ -292,7 +292,7 @@ dd {
 menu,
 ol,
 ul {
-    padding: 0 0 0 40px;
+    padding: 0 0 0 0;
 }
 
 /*
